syntax = "proto3";

package internal_message.service.v1;

import "gnostic/openapi/v3/annotations.proto";

import "google/api/annotations.proto";
import "google/api/field_behavior.proto";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/field_mask.proto";

import "pagination/v1/pagination.proto";

// 站内信消息服务
service InternalMessageService {
  // 查询站内信消息列表
  rpc ListMessage(pagination.PagingRequest) returns (ListInternalMessageResponse) {}

  // 查询站内信消息详情
  rpc GetMessage(GetInternalMessageRequest) returns (InternalMessage) {}

  // 创建站内信消息
  rpc CreateMessage(CreateInternalMessageRequest) returns (InternalMessage) {}

  // 更新站内信消息
  rpc UpdateMessage(UpdateInternalMessageRequest) returns (google.protobuf.Empty) {}

  // 删除站内信消息
  rpc DeleteMessage(DeleteInternalMessageRequest) returns (google.protobuf.Empty) {}


  // 发送消息
  rpc SendMessage(SendMessageRequest) returns (SendMessageResponse);

  // 撤销消息
  rpc RevokeMessage(RevokeMessageRequest) returns (google.protobuf.Empty);
}

// 站内信消息
message InternalMessage {
  // 消息状态
  enum Status {
    DRAFT = 0;      // 草稿
    PUBLISHED = 1;  // 已发布/发送完成
    SCHEDULED = 2;  // 定时发布中
    REVOKED = 3;    // 已撤销
    ARCHIVED = 5;   // 已归档（通常指系统层面的归档）
    DELETED = 6;    // 已删除（软删除）
  }

  // 消息类型
  enum Type {
    NOTIFICATION = 0; // 通知
    PRIVATE = 1; // 私信
    GROUP = 2; // 群聊
  }

  optional uint32 id = 1 [
    json_name = "id",
    (google.api.field_behavior) = OPTIONAL,
    (gnostic.openapi.v3.property) = { description: "消息ID" }
  ]; // 消息ID

  optional string title = 2 [
    json_name = "title",
    (gnostic.openapi.v3.property) = { description: "消息标题" }
  ]; // 消息标题

  optional string content = 3 [
    json_name = "content",
    (gnostic.openapi.v3.property) = { description: "消息内容" }
  ]; // 消息内容

  optional Status status = 4 [
    json_name = "status",
    (gnostic.openapi.v3.property) = { description: "消息状态" }
  ]; // 消息状态

  optional Type type = 5 [
    json_name = "type",
    (gnostic.openapi.v3.property) = { description: "消息类型" }
  ]; // 消息类型

  optional uint32 sender_id = 6 [
    json_name = "senderId",
    (gnostic.openapi.v3.property) = { description: "发送者 ID（用户 ID，系统消息为0）" }
  ]; // 发送者 ID（用户 ID，系统消息为0）

  optional string sender_name = 7 [
    json_name = "senderName",
    (gnostic.openapi.v3.property) = { description: "发送者名称" }
  ]; // 发送者名称

  optional uint32 category_id = 8 [
    json_name = "categoryId",
    (gnostic.openapi.v3.property) = { description: "分类ID" }
  ]; // 分类ID

  optional string category_name = 9 [
    json_name = "categoryName",
    (gnostic.openapi.v3.property) = { description: "分类名称" }
  ]; // 分类名称

  optional uint32 tenant_id = 40 [
    json_name = "tenantId",
    (gnostic.openapi.v3.property) = {description: "租户ID，0代表系统全局角色"}
  ];  // 租户ID，0代表系统全局角色
  optional string tenant_name = 41 [
    json_name = "tenantName",
    (gnostic.openapi.v3.property) = {description: "租户名称"}
  ];  // 租户名称

  optional uint32 created_by = 100 [json_name = "createdBy", (gnostic.openapi.v3.property) = {description: "创建者用户ID"}]; // 创建者用户ID
  optional uint32 updated_by = 101 [json_name = "updatedBy", (gnostic.openapi.v3.property) = {description: "更新者用户ID"}]; // 更新者用户ID
  optional uint32 deleted_by = 102 [json_name = "deletedBy", (gnostic.openapi.v3.property) = {description: "删除者用户ID"}]; // 删除者用户ID

  optional google.protobuf.Timestamp created_at = 200 [json_name = "createdAt", (gnostic.openapi.v3.property) = {description: "创建时间"}];// 创建时间
  optional google.protobuf.Timestamp updated_at = 201 [json_name = "updatedAt", (gnostic.openapi.v3.property) = {description: "更新时间"}];// 更新时间
  optional google.protobuf.Timestamp deleted_at = 202 [json_name = "deletedAt", (gnostic.openapi.v3.property) = {description: "删除时间"}];// 删除时间
}

// 查询站内信消息列表 - 回应
message ListInternalMessageResponse {
  repeated InternalMessage items = 1;
  uint64 total = 2;
}

// 查询站内信消息详情 - 请求
message GetInternalMessageRequest {
  oneof query_by {
    uint32 id = 1 [
      (gnostic.openapi.v3.property) = {description: "ID", read_only: true},
      json_name = "id"
    ]; // ID
  }

  optional google.protobuf.FieldMask view_mask = 100 [
    json_name = "viewMask",
    (gnostic.openapi.v3.property) = {
      description: "视图字段过滤器，用于控制返回的字段"
    }
  ]; // 视图字段过滤器，用于控制返回的字段
}

// 创建站内信消息 - 请求
message CreateInternalMessageRequest {
  InternalMessage data = 1;
}

// 更新站内信消息 - 请求
message UpdateInternalMessageRequest {
  uint32 id = 1;

  InternalMessage data = 2;

  google.protobuf.FieldMask update_mask = 3 [
    (gnostic.openapi.v3.property) = {
      description: "要更新的字段列表",
      example: {yaml : "id,realname,username"}
    },
    json_name = "updateMask"
  ]; // 要更新的字段列表

  optional bool allow_missing = 4 [
    (gnostic.openapi.v3.property) = {description: "如果设置为true的时候，资源不存在则会新增(插入)，并且在这种情况下`updateMask`字段将会被忽略。"},
    json_name = "allowMissing"
  ]; // 如果设置为true的时候，资源不存在则会新增(插入)，并且在这种情况下`updateMask`字段将会被忽略。
}

// 删除站内信消息 - 请求
message DeleteInternalMessageRequest {
  uint32 id = 1;
}

message SendMessageRequest {
  InternalMessage.Type type = 1 [
    json_name = "type",
    (gnostic.openapi.v3.property) = { description: "消息类型" }
  ]; // 消息类型

  optional uint32 recipient_user_id = 2 [
    json_name = "recipientUserId",
    (gnostic.openapi.v3.property) = { description: "接收者用户ID" }
  ]; // 接收者用户ID

  optional uint32 conversation_id = 3 [
    json_name = "conversationId",
    (gnostic.openapi.v3.property) = { description: "会话ID" }
  ]; // 会话ID

  optional uint32 category_id = 4 [
    json_name = "categoryId",
    (gnostic.openapi.v3.property) = { description: "分类ID" }
  ]; // 分类ID

  repeated uint32 target_user_ids = 6 [
    json_name = "targetUserIds",
    (gnostic.openapi.v3.property) = { description: "定向发送用户ID列表" }
  ]; // 定向发送用户ID列表

  optional bool target_all = 7 [
    json_name = "targetAll",
    (gnostic.openapi.v3.property) = { description: "全员发送标志" }
  ]; // 全员发送标志

  optional string title = 10 [
    json_name = "title",
    (gnostic.openapi.v3.property) = { description: "消息标题" }
  ]; // 消息标题

  string content = 11 [
    json_name = "content",
    (gnostic.openapi.v3.property) = { description: "消息内容" }
  ]; // 消息内容

  optional uint32 send_user_id = 12 [
    json_name = "sendUserId",
    (gnostic.openapi.v3.property) = { description: "发送者用户ID" }
  ]; // 发送者用户ID
}

message SendMessageResponse {
  uint32 message_id = 1 [
    json_name = "messageId",
    (gnostic.openapi.v3.property) = { description: "消息ID" }
  ]; // 消息ID
}

message RevokeMessageRequest {
  uint32 message_id = 1 [
    json_name = "messageId",
    (gnostic.openapi.v3.property) = { description: "消息ID" }
  ]; // 消息ID

  uint32 user_id = 2 [
    json_name = "userId",
    (gnostic.openapi.v3.property) = { description: "用户ID" }
  ]; // 用户ID
}
